--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,6 +1,8 @@
-#Fri Dec 14 12:42:41 IST 2018
+#Mon Dec 24 12:47:03 IST 2018
 execution.default.executionConfiguration="Chrome"
 execution.default.timeout=30
 execution.default.openReportAfterExecuting=false
 execution.default.quitDriversAfterExecutingTestCase=false
 execution.default.quitDriversAfterExecutingTestSuite=true
+report.takeScreenshotOption=true
+report.videoRecorderOption="{\\n  \\"enable\\"\: false,\\n  \\"videoFormat\\"\: \\"AVI\\",\\n  \\"videoQuality\\"\: \\"LOW\\",\\n  \\"allowedRecordIfFailed\\"\: true,\\n  \\"allowedRecordIfPassed\\"\: false\\n}"
